{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 94,
  "lineage": "91034397-193e-1523-eb5b-263a43c496ef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-073251dd98f09df06",
            "arn": "arn:aws:ec2:ap-south-1:750727007429:instance/i-06a1e8cfee98be6d5",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "EC2-SSM-Role",
            "id": "i-06a1e8cfee98be6d5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "default",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eebeac85836912d4",
            "private_dns": "ip-10-0-2-67.ap-south-1.compute.internal",
            "private_ip": "10.0.2.67",
            "public_ip": "13.235.247.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e4adbab002ec9c1a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0208e3438921e6c29",
            "tags": {
              "Name": "webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03aaf503c88e2ab53"
            ]
          },
          "depends_on": [
            "aws_security_group.km-security-group",
            "aws_subnet.km_public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "km-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-05db359873632b040",
            "owner_id": "750727007429",
            "tags": {
              "Name": "km-main-igw"
            },
            "vpc_id": "vpc-025d768115c823e1d"
          },
          "depends_on": [
            "aws_vpc.km-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routetable_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-049c4a99b9be2320d",
            "owner_id": "750727007429",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05db359873632b040",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicSubnetRouteTable"
            },
            "vpc_id": "vpc-025d768115c823e1d"
          },
          "depends_on": [
            "aws_internet_gateway.km-igw",
            "aws_vpc.km-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetableassc_public_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1f760184daf69f5",
            "route_table_id": "rtb-049c4a99b9be2320d",
            "subnet_id": "subnet-0208e3438921e6c29"
          },
          "depends_on": [
            "aws_route_table.routetable_public_subnet",
            "aws_subnet.km_public_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "km-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750727007429:security-group/sg-03aaf503c88e2ab53",
            "description": "Allow All tcp inbound traffic",
            "egress": [],
            "id": "sg-03aaf503c88e2ab53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "km-security-group",
            "name_prefix": null,
            "owner_id": "750727007429",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "km-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-025d768115c823e1d"
          },
          "depends_on": [
            "aws_vpc.km-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "km_private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750727007429:subnet/subnet-0c34dc73f85c89405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c34dc73f85c89405",
            "map_public_ip_on_launch": false,
            "owner_id": "750727007429",
            "tags": {
              "Name": "kmprivatesubnet1"
            },
            "vpc_id": "vpc-025d768115c823e1d"
          },
          "depends_on": [
            "aws_vpc.km-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "km_public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750727007429:subnet/subnet-0208e3438921e6c29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0208e3438921e6c29",
            "map_public_ip_on_launch": true,
            "owner_id": "750727007429",
            "tags": {
              "Name": "km_public_subnet1"
            },
            "vpc_id": "vpc-025d768115c823e1d"
          },
          "depends_on": [
            "aws_vpc.km-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "km-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:750727007429:vpc/vpc-025d768115c823e1d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0687d14a6a8f575d7",
            "default_route_table_id": "rtb-05f1d3f24e7442afe",
            "default_security_group_id": "sg-07299da00113d23d0",
            "dhcp_options_id": "dopt-817b9bea",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-025d768115c823e1d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f1d3f24e7442afe",
            "owner_id": "750727007429",
            "tags": {
              "Name": "km-vpc"
            }
          }
        }
      ]
    }
  ]
}